# rag-chunking-engine

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  setup.sh
api/: main.py
api/routes/: __init__.py  health.py  ingest.py  query.py
api/schemas/: __init__.py  models.py
docker/: Dockerfile  docker-compose.yml
docs/: deployment.md
docs/strategies/: 00_overview.md  01_fixed_size.md  02_recursive_character.md  03_document_aware.md  04_semantic.md  05_code_aware.md  06_row_aware.md  07_sliding_window.md  08_agentic.md
examples/: demo.py
examples/sample_documents/: code_sample.py  data.csv  structured_note.txt  transcript.txt
src/chunking_engine/: __init__.py
src/chunking_engine/chunkers/: __init__.py  agentic.py  base.py  code_aware.py  document_aware.py  fixed_size.py  recursive_character.py  row_aware.py  semantic.py  sliding_window.py
src/chunking_engine/config/: settings.py
src/chunking_engine/models/: __init__.py  azure_openai.py  base.py  bedrock.py
src/chunking_engine/pipeline/: __init__.py  ingestion_graph.py  retrieval_graph.py  state.py
src/chunking_engine/registry/: __init__.py  strategy_registry.py
src/chunking_engine/utils/: __init__.py  deduplication.py  metrics.py
src/chunking_engine/vectorstore/: __init__.py  indexer.py  milvus_client.py
tests/: conftest.py
tests/test_chunkers/: test_agentic.py  test_code_aware.py  test_document_aware.py  test_fixed_size.py  test_recursive.py  test_row_aware.py  test_semantic.py  test_sliding_window.py
tests/test_pipeline/: test_ingestion.py
